--- a/ClinicSystem/Views/Shared/_Layout.cshtml
+++ b/ClinicSystem/Views/Shared/_Layout.cshtml
@@ -27,6 +27,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Reservation" asp-action="GetReservationsForUser">Your reservations</a>
+                        </li>
                         @if (User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item">
