--- a/ClinicSystem/Views/Account/Login.cshtml
+++ b/ClinicSystem/Views/Account/Login.cshtml
@@ -1,24 +1,24 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "Login";
 }
 
 @model ClinicSystem.View_Models.LoginViewModel
 
-<form asp-action="Login" method="post">
-    <div>
-        <label asp-for="Email"></label>
-        <input asp-for="Email" />
-    </div>
-    <div>
-        <label asp-for="Password"></label>
-        <input asp-for="Password" type="password" />
-    </div>
-    <div>
-        <label asp-for="RememberMe"></label>
-        <input asp-for="RememberMe" type="checkbox" />
-    </div>
-    <button type="submit">Login</button>
-</form>
-
-
+<div class="container mt-5">
+    <h2 class="text-center mb-4">Login</h2>
+    <form asp-action="Login" method="post" class="shadow-lg p-4 bg-white rounded">
+        <div class="form-group mb-3">
+            <label asp-for="Email" class="form-label"></label>
+            <input asp-for="Email" class="form-control" />
+        </div>
+        <div class="form-group mb-3">
+            <label asp-for="Password" class="form-label"></label>
+            <input asp-for="Password" type="password" class="form-control" />
+        </div>
+        <div class="form-check mb-3">
+            <input asp-for="RememberMe" type="checkbox" class="form-check-input" />
+            <label asp-for="RememberMe" class="form-check-label">Remember me</label>
+        </div>
+        <button type="submit" class="btn btn-primary w-100">Login</button>
+    </form>
+</div>
