--- a/ClinicSystem/Views/Reservation/SelectTimeSlots.cshtml
+++ b/ClinicSystem/Views/Reservation/SelectTimeSlots.cshtml
@@ -5,17 +5,18 @@
     DateTime selectedDate = ViewBag.SelectedDate;
 }
 
-<h2>Select a Time Slot on @selectedDate.ToString("dddd, MMMM dd, yyyy")</h2>
-
-<ul>
-    @foreach (var slot in Model)
-    {
-        <li>
-            <form asp-action="MakeReservation" method="post">
-                <input type="hidden" name="doctorId" value="@docId" />
-                <input type="hidden" name="selectedSlot" value="@slot" />
-                <button type="submit">@slot.ToString("hh:mm tt")</button>
-            </form>
-        </li>
-    }
-</ul>
+<div class="container mt-5">
+    <h2 class="text-center">Select a Time Slot on @selectedDate.ToString("dddd, MMMM dd, yyyy")</h2>
+    <ul class="list-group list-group-flush">
+        @foreach (var slot in Model)
+        {
+            <li class="list-group-item text-center">
+                <form asp-action="MakeReservation" method="post">
+                    <input type="hidden" name="doctorId" value="@docId" />
+                    <input type="hidden" name="selectedSlot" value="@slot" />
+                    <button type="submit" class="btn btn-primary">@slot.ToString("hh:mm tt")</button>
+                </form>
+            </li>
+        }
+    </ul>
+</div>
