Added the edit and delete options for the doctors and the clinics

--- a/ClinicSystem/Views/Shared/_Layout.cshtml
+++ b/ClinicSystem/Views/Shared/_Layout.cshtml
@@ -31,6 +31,14 @@
                         {
                             <a class="nav-link text-dark" asp-area="" asp-controller="Reservation" asp-action="GetReservationsForUser">Reservation</a>
                         }
+                        @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                        {
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="ManageClinics">Manage Clinics</a>
+                        }
+                        @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                        {
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="ManageDoctors">Manage Doctors</a>
+                        }
                         @if (User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item">
@@ -65,6 +73,9 @@
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
